# utag

./: CMakeLists.txt  LICENSE  README.md  build.sh
3dparty/: CMakeLists.txt
3dparty/id3lib/: CMakeLists.txt
3dparty/taglib/: CMakeCache.txt
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  buttons.cpp  file_utils.cpp  file_utils.h  files.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytag.cpp  mytag.h  sort.cpp  theme.cpp
